Subsurf (adjust edit cage to modifier result disabled) and armature modifier (adjust edit cage to modifier result enabled) causes transformation distortion on certain vertices #54292

Closed
opened 2018-03-11 16:22:56 +01:00 by Henrik Berglund · 8 comments

System Information
Win8, GTX1070

Blender Version
Broken: 2.79 release and master

Short description of error

Subsurf (adjust edit cage to modifier result disabled) and armature modifier (adjust edit cage to modifier result enabled) causes transformation distortion on certain vertices. Meaning, if you select certain vertices and transform then they won't follow the cursor but will be distorted.

Exact steps for others to reproduce the error
Attached blend: bug_edit_cage_subsurf_armature.blend Just select the top vertices and move up along Z axis.

  1. Create a cube.
  2. Add a loopcut in the middle.
  3. Add an armature (bone).
  4. Automatically weigh the cube to the armature.
  5. Add a subsurf modifier to the cube.
  6. Make sure adjust edit cage to modifier is disabled for subsurface modifier and enabled for armature.
  7. Select the top vertices of the cube and move them along the Z axis (axis lock).
    Result: Top vertices don't follow the Z axis but the movement is distorted.
    Expected: Top vertices follow the Z axis.

Enabling adjust edit cage to modifier for the subsurf modifier too fixes the problem.

**System Information** Win8, GTX1070 **Blender Version** Broken: 2.79 release and master **Short description of error** Subsurf (adjust edit cage to modifier result disabled) and armature modifier (adjust edit cage to modifier result enabled) causes transformation distortion on certain vertices. Meaning, if you select certain vertices and transform then they won't follow the cursor but will be distorted. **Exact steps for others to reproduce the error** Attached blend: [bug_edit_cage_subsurf_armature.blend](https://archive.blender.org/developer/F2434967/bug_edit_cage_subsurf_armature.blend) Just select the top vertices and move up along Z axis. 1. Create a cube. 2. Add a loopcut in the middle. 3. Add an armature (bone). 4. Automatically weigh the cube to the armature. 5. Add a subsurf modifier to the cube. 6. Make sure adjust edit cage to modifier is disabled for subsurface modifier and enabled for armature. 7. Select the top vertices of the cube and move them along the Z axis (axis lock). Result: Top vertices don't follow the Z axis but the movement is distorted. Expected: Top vertices follow the Z axis. Enabling adjust edit cage to modifier for the subsurf modifier too fixes the problem.
Author
Member

Added subscriber: @cyaoeu

Added subscriber: @cyaoeu
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Can confirm the behavior, but unable to say if it's working 'as designed' or not.

Can confirm the behavior, but unable to say if it's working 'as designed' or not.
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

In #50597#853881, @mano-wii wrote:
This is a limitation of the transform system that does not use the modifier's crazyspace correction.
However, this could be supported...

@mano-wii: not exactly sure if this applies here as well? (strange thing is that the armature doesn not really contribute any deformation at all...)

> In #50597#853881, @mano-wii wrote: > This is a limitation of the transform system that does not use the modifier's crazyspace correction. > However, this could be supported... @mano-wii: not exactly sure if this applies here as well? (strange thing is that the armature doesn not really contribute any deformation at all...)

I was actually wrong.
The trasform system supports crazyspace correction! (Gizmo is a different system).
The problem here is that the crasyspace is being calculated incorrectly.

I was actually wrong. The trasform system **supports** crazyspace correction! (Gizmo is a different system). The problem here is that the crasyspace is being calculated incorrectly.

This issue was referenced by bf8a26b745

This issue was referenced by bf8a26b7453d9b980a77452c3510afba0d35af01

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-02-01 03:59:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54292
No description provided.